# carbon-intensity

./: .gitignore  .gitmodules  CHANGES.md  LICENSE  README.md  carbon.opam  dune  dune-project
docs/: prelude.txt
example/: dune  main.ml
src/: carbon.ml  carbon.mli  carbon_intf.ml  co2_signal.ml  co2_signal.mli  dune  fr.ml  fr.mli  gb.ml  gb.mli  http_client.ml  tls_eio.ml
src/include/: README.md  co2_signal_zones.ml  dune  zones.json
src/plugins/: co2_signal.ml  co2_signal.mli  dns.ml  fr.ml  fr.mli  gb.ml  gb.mli  j.ml
