opam-version: "2.0"
synopsis: "OCaml library for accessing various Carbon Intensity APIs"
description: ""
maintainer: ["patrick@sirref.org"]
authors: ["Patrick Ferris"]
license: "MIT"
homepage: "https://github.com/geocaml/carbon-intensity"
bug-reports: "https://github.com/geocaml/carbon-intensity/issues"
depends: [
  "dune" {>= "2.9"}
  "cohttp-eio"
  "ezjsonm"
  "ptime"
  "tls"
  "mirage-crypto-rng"
  "ISO3166"
  "mdx" {with-test}
  "eio_main" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/geocaml/carbon-intensity.git"
pin-depends: [
  "http.dev" "git+https://github.com/mirage/ocaml-cohttp#ce5f271b69fe42471ede858c5b8ce8203e3c14ad"
  "cohttp-eio.dev" "git+https://github.com/mirage/ocaml-cohttp#ce5f271b69fe42471ede858c5b8ce8203e3c14ad"
  "ISO3166.dev" "https://github.com/geocaml/ISO3166#425ce3790f8e0a94ad31dd3ff6033463d645b3db"
]