opam-version: "2.0"
synopsis: "OCaml library for accessing various Carbon Intensity APIs"
description: "Carbon provides access to various APIs to discover carbon intensity information for different countries."
maintainer: ["patrick@sirref.org"]
authors: ["Patrick Ferris"]
license: "MIT"
homepage: "https://github.com/geocaml/carbon-intensity"
bug-reports: "https://github.com/geocaml/carbon-intensity/issues"
depends: [
  "dune" {>= "2.9"}
  "cohttp-eio"
  "ezjsonm"
  "ptime"
  "tls-eio"
  "ISO3166"
  "uri"
  "mirage-crypto-rng-eio" {with-test}
  "mdx" {with-test}
  "eio_main" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/geocaml/carbon-intensity.git"